starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__block_comment_inside_function.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\nfn foo() -> i64 {\n    /* compute the result */\n    let x = 1;\n    x\n}\n"
---
fn foo() -> i64 {
    /* compute the result */
    let x = 1;
    x
}
