starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__comment_at_start_of_function_body.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\nfn foo() -> i64 {\n    // Comment at the very start\n    let x = 1;\n    x + 1\n}\n"
---
fn foo() -> i64 {
    // Comment at the very start
    let x = 1;
    x + 1
}
