starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__comment_map_doc_comment_on_function.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\nstruct Thing { x: i64 } // some comment\n\n/// Adds two integers together.\nfn add(a: i64, b: i64) -> i64 {\n    a + b\n}\n"
---
struct Thing {
    x: i64,
} // some comment

/// Adds two integers together.
fn add(a: i64, b: i64) -> i64 {
    a + b
}
