starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__comment_map_inline_and_block_comments.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\n// Header comment\nstruct A { x: i64 } // inline on A\n\n// Comment before B\nstruct B { y: i64 }\n"
---
// Header comment
struct A {
    x: i64,
} // inline on A

// Comment before B
struct B {
    y: i64,
}
