starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__comments.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\n#!/usr/bin/env starstream\nfn main(){}\n"
---
#!/usr/bin/env starstream
fn main() { }
